syntax = "proto3";

package TransferApi;

service Transfer {
  rpc GetAll (GetTransfersRequest) returns (TransfersResponse) {}
}

message GetTransfersRequest {
}

message TransfersResponse {
  repeated TransferResponse transfers = 1;
}

message TransferResponse {
  string id = 1;
  double amount = 2;
  TransferType type = 3;
  string dateTime = 4;
  string accountId =5;
}

enum TransferType {
  Deposit = 0;
  Withdrawal = 1;
}